multi_index_map_derive2/tests/ui/unknown.stderr
error: invalid index kind; expected hashed_unique, hashed_non_unique, ordered_unique, or ordered_non_unique
 --> tests/ui/unknown.rs:5:19
  |
5 |     #[multi_index(something_else)]
  |                   ^^^^^^^^^^^^^^

error: MultiIndexMap2 requires at least one #[multi_index(...)] field
 --> tests/ui/unknown.rs:4:8
  |
4 | struct Unknown {
  |        ^^^^^^^
